# ros2_homework

./: LICENSE  README.md
.github/workflows/: test.yml
login_info_msgs/: CMakeLists.txt  package.xml
login_info_msgs/msg/: LoginInfo.msg  LoginInfoArray.msg
send_login_info/: package.xml  setup.cfg  setup.py
send_login_info/send_login_info/: send_login_info.py
send_login_info/test/: test.bash
test/: test.bash
